--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -56,20 +56,20 @@
 
     {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
     <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a
-        href="{{ post.slidesurl }}">Download Slides</a> | <a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
+        href="{{ post.slidesurl }}">Download Code</a> | <a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.citation and post.paperurl and post.slidesurl %}
     <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a
-        href="{{ post.slidesurl }}">Download Slides</a></p>
+        href="{{ post.slidesurl }}">Download Code</a></p>
     {% elsif post.citation and post.paperurl and post.bibtexurl %}
     <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a
         href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.citation and post.paperurl %}
     <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
     {% elsif post.citation and post.slidesurl and post.bibtexurl %}
-    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a> | <a
+    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Code</a> | <a
         href="{{ post.bibtexurl}}">Download Bibtex</a></p>
     {% elsif post.citation and post.slidesurl %}
-    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a></p>
+    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Code</a></p>
     {% elsif post.citation and post.bibtexurl %}
     <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.citation %}
@@ -79,9 +79,9 @@
     {% elsif post.paperurl %}
     <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
     {% elsif post.slidesurl and post.bibtexurl %}
-    <p><a href="{{ post.slidesurl }}">Download Slides</a> | <a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
+    <p><a href="{{ post.slidesurl }}">Download Code</a> | <a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.slidesurl %}
-    <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
+    <p><a href="{{ post.slidesurl }}">Download Code</a></p>
     {% elsif post.bibtexurl %}
     <p><a href="{{ post.bibtexurl }}">Download Bibtex</a></p>
     {% elsif post.codeurl %}
